--- a/index.html
+++ b/index.html
@@ -55,14 +55,18 @@ compartmentalization features supported by the CHERI ISA. CheriBSD
 includes support for CHERI extensions to the MIPS, RISC-V and
 Arm/Morello architectures.</p>
       <p>
-        <a href="http://cheri-cpu.org" class="btn btn-secondary my-2">Learn MoreAbout CHERI</a>
+        <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html.org"
+        class="btn btn-danger btn-lg">Getting Started with Morello</a>
       </p>
       <p>
-            <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="btn btn-secondary my-2">Sign up for Email Announcments of Releases and Updates</a>
+            <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="btn btn-info my-2">Sign up for Email Announcments of Releases and Updates</a>
       </p>
       <p>
-            <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="btn btn-secondary my-2">Join our Email Discussion List</a>
+            <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="btn btn-info my-2">Join our Email Discussion List</a>
      <p>
+      <p>
+        <a href="http://cheri-cpu.org" class="btn btn-info my-2">Learn MoreAbout CHERI</a>
+      </p>
           </ul>
 
       </p>
