Fix a broken link, a broken space, and retitle a button.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ compartmentalization features supported by the CHERI ISA. CheriBSD
 includes support for CHERI extensions to the MIPS, RISC-V and
 Arm/Morello architectures.</p>
       <p>
-        <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html.org"
-        class="btn btn-danger btn-lg">Getting Started with Morello</a>
+        <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html"
+        class="btn btn-danger btn-lg">Get Started with CheriBSD on Morello</a>
       </p>
       <p>
             <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="btn btn-info my-2">Sign up for Email Announcments of Releases and Updates</a>
@@ -65,7 +65,8 @@ Arm/Morello architectures.</p>
             <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="btn btn-info my-2">Join our Email Discussion List</a>
      <p>
       <p>
-        <a href="http://cheri-cpu.org" class="btn btn-info my-2">Learn MoreAbout CHERI</a>
+        <a href="http://cheri-cpu.org" class="btn btn-info my-2">Learn
+        More About CHERI</a>
       </p>
           </ul>
 
