Add a button for downloading the latest release

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@ Arm/Morello architectures.</p>
         class="btn btn-danger btn-lg">Get Started with CheriBSD on Morello</a>
       </p>
       <p>
+        <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.05/cheribsd-memstick-arm64-aarch64c-22.05.img.xz"
+        class="btn btn-info btn-lg">Download an installable CheriBSD
+        image for Morello</a>
+      </p>
+      <p>
             <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="btn btn-info my-2">Sign up for Email Announcments of Releases and Updates</a>
       </p>
       <p>
