Updates for 22.12 release.

--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@ CheriBSD extends FreeBSD to implement memory protection and software
 compartmentalization features supported by the CHERI ISA. CheriBSD
 includes support for CHERI extensions to the MIPS, RISC-V and
 Arm/Morello architectures.</p>
+<br>
       <p>
         <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html"
         class="btn btn-danger btn-lg">Get Started with CheriBSD on Morello</a>
       </p>
       <p>
-        <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.05/cheribsd-memstick-arm64-aarch64c-22.05.img.xz"
+        <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
         class="btn btn-info btn-lg">Download an installable CheriBSD
-        image for Morello</a>
+        22.12 image for Morello</a>
       </p>
       <p>
             <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="btn btn-info my-2">Sign up for Email Announcments of Releases and Updates</a>
