Restyle homepage with desktop screenshot and less-cumbersome link text

--- a/index.html
+++ b/index.html
@@ -47,36 +47,72 @@
       <h1>CheriBSD</h1>
       <p class="lead text-muted">CheriBSD is a Capability Enabled,
       Unix-like Operating System which takes advantage of Capability Hardware on
-      Arm's Morello and CHERI-RISC-V platforms.
-<br>
-<br>
-CheriBSD extends FreeBSD to implement memory protection and software
-compartmentalization features supported by the CHERI ISA. CheriBSD
-includes support for CHERI extensions to the MIPS, RISC-V and
-Arm/Morello architectures.</p>
-<br>
-      <p>
-        <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html"
-        class="btn btn-danger btn-lg">Get Started with CheriBSD on Morello</a>
-      </p>
-      <p>
-        <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
-        class="btn btn-info btn-lg">Download an installable CheriBSD
-        22.12 image for Morello</a>
-      </p>
-      <p>
-            <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="btn btn-info my-2">Sign up for Email Announcments of Releases and Updates</a>
-      </p>
-      <p>
-            <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="btn btn-info my-2">Join our Email Discussion List</a>
-     <p>
-      <p>
-        <a href="http://cheri-cpu.org" class="btn btn-info my-2">Learn
-        More About CHERI</a>
-      </p>
-          </ul>
-
-      </p>
+      Arm's Morello and CHERI-RISC-V platforms.</p>
+      <p class="lead text-muted">CheriBSD extends FreeBSD to implement memory protection and software
+      compartmentalization features supported by the CHERI ISA. CheriBSD
+      includes support for CHERI extensions to the MIPS, RISC-V and
+      Arm/Morello architectures.</p>
+      <div class="row">
+        <div class="col-lg-8 col-xl-9">
+          <img src="cheri-desktop.png" class="shadow w-100 mb-3">
+        </div>
+        <div class="col-lg-4 col-xl-3 text-muted text-left">
+          <div class="row">
+            <div class="col">
+              <h5>CheriBSD 22.12</h5>
+              <hr class="mt-0">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-lg-12">
+              <div class="row">
+                <div class="col">
+                  <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html"
+                    class="btn btn-primary w-100 mb-3">Get Started on Morello</a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
+                    class="btn btn-outline-primary w-100 mb-3">Download Morello installer</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-md-none d-lg-block">
+              <div class="row">
+                <div class="col">
+                  <hr class="mt-0">
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-12">
+              <div class="row">
+                <div class="col">
+                  <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce"
+                    class="btn btn-outline-info w-100 mb-3">Sign up for Email Updates</a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss"
+                    class="btn btn-outline-info w-100 mb-3">Join our Email Discussion List</a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <a href="http://cheri-cpu.org" class="btn btn-outline-info w-100 mb-3">Learn
+                  More About CHERI</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <hr class="mt-0">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 </main>
