--- a/index.html
+++ b/index.html
@@ -72,8 +72,38 @@
                   </div>
                   <div class="row">
                     <div class="col">
-                      <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
-                        class="btn btn-outline-primary w-100 mb-3">Download Morello Installer</a>
+                      <div class="btn-group mb-3 w-100">
+                        <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
+                           class="btn btn-outline-primary w-100">Download Morello Installer</a>
+                        <button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-expanded="false">
+                          <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                          <h6 class="dropdown-header">Old Versions</h6>
+                          <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.05p1/cheribsd-memstick-arm64-aarch64c-22.05p1.img.xz"
+                             class="dropdown-item">22.05p1</a>
+                          <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.05/cheribsd-memstick-arm64-aarch64c-22.05.img.xz"
+                             class="dropdown-item">22.05</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <div class="btn-group mb-3 w-100">
+                        <a href="/release-notes/22.12/index.html"
+                           class="btn btn-outline-primary w-100">View Release Notes</a>
+                        <button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-expanded="false">
+                          <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                          <h6 class="dropdown-header">Old Versions</h6>
+                          <a href="/release-notes/22.05p1/index.html"
+                             class="dropdown-item">22.05p1</a>
+                          <a href="/release-notes/22.05/index.html"
+                             class="dropdown-item">22.05</a>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
