Use proper title case and sync header link titles

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
-            <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="text-white">Sign up for Email Announcments of Releases and Updates</a></li>
+            <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="text-white">Sign Up for Email Updates</a></li>
             <br>
-            <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="text-white">Join our Email Discussion List</a></li>
+            <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="text-white">Join Our Email Discussion List</a></li>
           </ul>
         </div>
       </div>
@@ -74,7 +74,7 @@
               <div class="row">
                 <div class="col">
                   <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
-                    class="btn btn-outline-primary w-100 mb-3">Download Morello installer</a>
+                    class="btn btn-outline-primary w-100 mb-3">Download Morello Installer</a>
                 </div>
               </div>
             </div>
@@ -89,13 +89,13 @@
               <div class="row">
                 <div class="col">
                   <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce"
-                    class="btn btn-outline-info w-100 mb-3">Sign up for Email Updates</a>
+                    class="btn btn-outline-info w-100 mb-3">Sign Up for Email Updates</a>
                 </div>
               </div>
               <div class="row">
                 <div class="col">
                   <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss"
-                    class="btn btn-outline-info w-100 mb-3">Join our Email Discussion List</a>
+                    class="btn btn-outline-info w-100 mb-3">Join Our Email Discussion List</a>
                 </div>
               </div>
               <div class="row">
