Fix indentation and add missing </body>

--- a/index.html
+++ b/index.html
@@ -10,128 +10,129 @@
   </head>
   <body>
     <header>
-  <div class="collapse bg-dark" id="navbarHeader">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-muted">CheriBSD extends FreeBSD to implement memory protection and software compartmentalization features supported by the CHERI ISA. CheriBSD includes support for CHERI extensions to the MIPS, RISC-V and Arm/Morello architectures</p>
-        </div>
-        <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
-          <ul class="list-unstyled">
-            <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="text-white">Sign Up for Email Updates</a></li>
-            <br>
-            <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="text-white">Join Our Email Discussion List</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
-    <div class="container d-flex justify-content-between">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-        <strong>CheriBSD</strong>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </div>
-</header>
-
-<main role="main">
-
-  <section class="jumbotron text-center rounded-0 m-0">
-    <div class="container">
-      <h1>CheriBSD</h1>
-      <p class="lead text-muted">CheriBSD is a Capability Enabled,
-      Unix-like Operating System which takes advantage of Capability Hardware on
-      Arm's Morello and CHERI-RISC-V platforms.</p>
-      <p class="lead text-muted">CheriBSD extends FreeBSD to implement memory protection and software
-      compartmentalization features supported by the CHERI ISA. CheriBSD
-      includes support for CHERI extensions to the MIPS, RISC-V and
-      Arm/Morello architectures.</p>
-      <div class="row">
-        <div class="col-lg-8 col-xl-9">
-          <img src="cheri-desktop.png" class="shadow w-100 mb-3">
-        </div>
-        <div class="col-lg-4 col-xl-3 text-muted text-left">
+      <div class="collapse bg-dark" id="navbarHeader">
+        <div class="container">
           <div class="row">
-            <div class="col">
-              <h5>CheriBSD 22.12</h5>
-              <hr class="mt-0">
+            <div class="col-sm-8 col-md-7 py-4">
+              <h4 class="text-white">About</h4>
+              <p class="text-muted">CheriBSD extends FreeBSD to implement memory protection and software compartmentalization features supported by the CHERI ISA. CheriBSD includes support for CHERI extensions to the MIPS, RISC-V and Arm/Morello architectures</p>
+            </div>
+            <div class="col-sm-4 offset-md-1 py-4">
+              <h4 class="text-white">Contact</h4>
+              <ul class="list-unstyled">
+                <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="text-white">Sign Up for Email Updates</a></li>
+                <br>
+                <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="text-white">Join Our Email Discussion List</a></li>
+              </ul>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="container d-flex justify-content-between">
+          <a href="#" class="navbar-brand d-flex align-items-center">
+            <strong>CheriBSD</strong>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </div>
+    </header>
+
+    <main role="main">
+
+      <section class="jumbotron text-center rounded-0 m-0">
+        <div class="container">
+          <h1>CheriBSD</h1>
+          <p class="lead text-muted">CheriBSD is a Capability Enabled,
+          Unix-like Operating System which takes advantage of Capability Hardware on
+          Arm's Morello and CHERI-RISC-V platforms.</p>
+          <p class="lead text-muted">CheriBSD extends FreeBSD to implement memory protection and software
+          compartmentalization features supported by the CHERI ISA. CheriBSD
+          includes support for CHERI extensions to the MIPS, RISC-V and
+          Arm/Morello architectures.</p>
           <div class="row">
-            <div class="col-md-6 col-lg-12">
-              <div class="row">
-                <div class="col">
-                  <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html"
-                    class="btn btn-primary w-100 mb-3">Get Started on Morello</a>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
-                    class="btn btn-outline-primary w-100 mb-3">Download Morello Installer</a>
-                </div>
-              </div>
+            <div class="col-lg-8 col-xl-9">
+              <img src="cheri-desktop.png" class="shadow w-100 mb-3">
             </div>
-            <div class="col d-md-none d-lg-block">
+            <div class="col-lg-4 col-xl-3 text-muted text-left">
+              <div class="row">
+                <div class="col">
+                  <h5>CheriBSD 22.12</h5>
+                  <hr class="mt-0">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 col-lg-12">
+                  <div class="row">
+                    <div class="col">
+                      <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html"
+                        class="btn btn-primary w-100 mb-3">Get Started on Morello</a>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
+                        class="btn btn-outline-primary w-100 mb-3">Download Morello Installer</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col d-md-none d-lg-block">
+                  <div class="row">
+                    <div class="col">
+                      <hr class="mt-0">
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-12">
+                  <div class="row">
+                    <div class="col">
+                      <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce"
+                        class="btn btn-outline-info w-100 mb-3">Sign Up for Email Updates</a>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss"
+                        class="btn btn-outline-info w-100 mb-3">Join Our Email Discussion List</a>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <a href="http://cheri-cpu.org" class="btn btn-outline-info w-100 mb-3">Learn
+                      More About CHERI</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="row">
                 <div class="col">
                   <hr class="mt-0">
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-12">
-              <div class="row">
-                <div class="col">
-                  <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce"
-                    class="btn btn-outline-info w-100 mb-3">Sign Up for Email Updates</a>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss"
-                    class="btn btn-outline-info w-100 mb-3">Join Our Email Discussion List</a>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <a href="http://cheri-cpu.org" class="btn btn-outline-info w-100 mb-3">Learn
-                  More About CHERI</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <hr class="mt-0">
-            </div>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
-</main>
+      </section>
+    </main>
 
-<footer class="text-muted py-5">
-  <div class="container">
-    <p>
-CheriBSD/Morello is a Digital Security by Design (DSbD) technology. This work was supported in part by the UK Industrial Strategy Challenge Fund (ICSCF) and Innovate UK project Digital Security by Design (DSbD) Technology Platform Prototype, 105694.
-<br>
-<br>
-Approved for public release; distribution is unlimited.  Supported  by the Defense Advanced Research Projects Agency (DARPA) and the Air Force Research Laboratory (AFRL), under contract FA8750-10-C-0237 ("CTSRD"), with additional support from FA8750-11-C-0249 ("MRC2"), HR0011-18-C-0016 ("ECATS"), and FA8650-18-C-7809 ("CIFV") as part of the DARPA CRASH, MRC, and SSITH research programs.  The views, opinions, and/or findings contained in this report are those of the authors and should not be interpreted as representing the official views or policies, either expressed or implied, of the Department of Defense or the U.S. Government.  Additional support was received from St John's College Cambridge, the Google SOAAP Focused Research Award, a Google Chrome University Research Program Award, the RCUK's Horizon Digital Economy Research Hub Grant (EP/G065802/1), the EPSRC REMS Programme Grant (EP/K008528/1), the EPSRC Impact Acceleration Account (EP/K503757/1), the EPSRC IOSEC grant (EP/EP/R012458/1), the ERC Advanced Grant ELVER (789108), the Isaac Newton Trust, the UK Higher Education Innovation Fund (HEIF), Thales E-Security, Microsoft Research Cambridge, Arm Limited, Google DeepMind, HP Enterprise, and a Gates Cambridge Scholarship.
-    </p>
-  </div>
-  <div class="container">
-    <p class="float-right">
-      <a href="#">Back to top</a>
-    </p>
-  </div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="assets/dist/js/bootstrap.bundle.min.js"></script>
+    <footer class="text-muted py-5">
+      <div class="container">
+        <p>
+          CheriBSD/Morello is a Digital Security by Design (DSbD) technology. This work was supported in part by the UK Industrial Strategy Challenge Fund (ICSCF) and Innovate UK project Digital Security by Design (DSbD) Technology Platform Prototype, 105694.
+          <br>
+          <br>
+          Approved for public release; distribution is unlimited.  Supported  by the Defense Advanced Research Projects Agency (DARPA) and the Air Force Research Laboratory (AFRL), under contract FA8750-10-C-0237 ("CTSRD"), with additional support from FA8750-11-C-0249 ("MRC2"), HR0011-18-C-0016 ("ECATS"), and FA8650-18-C-7809 ("CIFV") as part of the DARPA CRASH, MRC, and SSITH research programs.  The views, opinions, and/or findings contained in this report are those of the authors and should not be interpreted as representing the official views or policies, either expressed or implied, of the Department of Defense or the U.S. Government.  Additional support was received from St John's College Cambridge, the Google SOAAP Focused Research Award, a Google Chrome University Research Program Award, the RCUK's Horizon Digital Economy Research Hub Grant (EP/G065802/1), the EPSRC REMS Programme Grant (EP/K008528/1), the EPSRC Impact Acceleration Account (EP/K503757/1), the EPSRC IOSEC grant (EP/EP/R012458/1), the ERC Advanced Grant ELVER (789108), the Isaac Newton Trust, the UK Higher Education Innovation Fund (HEIF), Thales E-Security, Microsoft Research Cambridge, Arm Limited, Google DeepMind, HP Enterprise, and a Gates Cambridge Scholarship.
+        </p>
+      </div>
+      <div class="container">
+        <p class="float-right">
+          <a href="#">Back to top</a>
+        </p>
+      </div>
+    </footer>
+  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 </html>
