Replace the final <br> with .mb-4

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="text-white">Sign Up for Email Updates</a></li>
-                <br>
+                <li class="mb-4"><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-announce" class="text-white">Sign Up for Email Updates</a></li>
                 <li><a href="https://lists.cam.ac.uk/sympa/info/cl-cheribsd-discuss" class="text-white">Join Our Email Discussion List</a></li>
               </ul>
             </div>
