--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-muted">CheriBSD extends FreeBSD to implement memory protection and software compartmentalization features supported by the CHERI ISA. CheriBSD includes support for CHERI extensions to the MIPS, RISC-V and Arm/Morello architectures</p>
+              <p class="text-muted">CheriBSD extends FreeBSD to implement memory protection and software compartmentalization features supported by the CHERI ISA. CheriBSD includes support for CHERI extensions to the RISC-V and Arm/Morello architectures</p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
@@ -49,7 +49,7 @@
             Arm's Morello and CHERI-RISC-V platforms.</p>
           <p class="lead text-muted">CheriBSD extends FreeBSD to implement memory protection and software
             compartmentalization features supported by the CHERI ISA. CheriBSD
-            includes support for CHERI extensions to the MIPS, RISC-V and
+            includes support for CHERI extensions to the RISC-V and
             Arm/Morello architectures.</p>
           <div class="row">
             <div class="col-lg-8 col-xl-9">
