Update homepage for 23.11 release

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-lg-4 col-xl-3 text-muted text-left">
               <div class="row">
                 <div class="col">
-                  <h5>CheriBSD 22.12</h5>
+                  <h5>CheriBSD 23.11</h5>
                   <hr class="mt-0">
                 </div>
               </div>
@@ -80,16 +80,18 @@
                   <div class="row">
                     <div class="col">
                       <div class="btn-group mb-3 w-100">
-                        <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
+                        <a href="https://download.cheribsd.org/releases/arm64/aarch64c/23.11/cheribsd-memstick-arm64-aarch64c-23.11.img.xz"
                            class="btn btn-outline-primary w-100">Download Morello Installer</a>
                         <button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-expanded="false">
                           <span class="sr-only">Toggle Dropdown</span>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                           <h6 class="dropdown-header">Current Version</h6>
+                          <a href="https://download.cheribsd.org/releases/arm64/aarch64c/23.11/cheribsd-memstick-arm64-aarch64c-23.11.img.xz"
+                             class="dropdown-item">23.11</a>
+                          <h6 class="dropdown-header">Old Versions</h6>
                           <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.12/cheribsd-memstick-arm64-aarch64c-22.12.img.xz"
                              class="dropdown-item">22.12</a>
-                          <h6 class="dropdown-header">Old Versions</h6>
                           <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.05p1/cheribsd-memstick-arm64-aarch64c-22.05p1.img.xz"
                              class="dropdown-item">22.05p1</a>
                           <a href="https://download.cheribsd.org/releases/arm64/aarch64c/22.05/cheribsd-memstick-arm64-aarch64c-22.05.img.xz"
@@ -101,16 +103,18 @@
                   <div class="row">
                     <div class="col">
                       <div class="btn-group mb-3 w-100">
-                        <a href="/release-notes/22.12/index.html"
+                        <a href="/release-notes/23.11/index.html"
                            class="btn btn-outline-primary w-100">View Release Notes</a>
                         <button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-expanded="false">
                           <span class="sr-only">Toggle Dropdown</span>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                           <h6 class="dropdown-header">Current Version</h6>
+                          <a href="/release-notes/23.11/index.html"
+                             class="dropdown-item">23.11</a>
+                          <h6 class="dropdown-header">Old Versions</h6>
                           <a href="/release-notes/22.12/index.html"
                              class="dropdown-item">22.12</a>
-                          <h6 class="dropdown-header">Old Versions</h6>
                           <a href="/release-notes/22.05p1/index.html"
                              class="dropdown-item">22.05p1</a>
                           <a href="/release-notes/22.05/index.html"
