Add a button to view the tutorial

--- a/index.html
+++ b/index.html
@@ -133,6 +133,22 @@
                       </div>
                     </div>
                   </div>
+                  <div class="row">
+                    <div class="col">
+                      <div class="btn-group mb-3 w-100">
+                        <a href="./tutorial/23.11/"
+                           class="btn btn-outline-primary w-100">View Tutorial</a>
+                        <button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-expanded="false">
+                          <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                          <h6 class="dropdown-header">Current Version</h6>
+                          <a href="./tutorial/23.11/"
+                             class="dropdown-item">23.11</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="col d-md-none d-lg-block">
                   <div class="row">
