--- a/index.html
+++ b/index.html
@@ -73,8 +73,18 @@
                 <div class="col-md-6 col-lg-12">
                   <div class="row">
                     <div class="col">
-                      <a href="https://ctsrd-cheri.github.io/cheribsd-getting-started/cover/index.html"
-                        class="btn btn-primary w-100 mb-3">Get Started on Morello</a>
+                      <div class="btn-group mb-3 w-100">
+                        <a href="getting-started/23.11/"
+                          class="btn btn-primary w-100">Get Started on Morello</a>
+                        <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-expanded="false">
+                          <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                          <h6 class="dropdown-header">Current Version</h6>
+                          <a href="getting-started/23.11/"
+                             class="dropdown-item">23.11</a>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <div class="row">
@@ -119,6 +129,22 @@
                              class="dropdown-item">22.05p1</a>
                           <a href="./release-notes/22.05/index.html"
                              class="dropdown-item">22.05</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <div class="btn-group mb-3 w-100">
+                        <a href="./tutorial/23.11/"
+                           class="btn btn-outline-primary w-100">View Tutorial</a>
+                        <button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-expanded="false">
+                          <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                          <h6 class="dropdown-header">Current Version</h6>
+                          <a href="./tutorial/23.11/"
+                             class="dropdown-item">23.11</a>
                         </div>
                       </div>
                     </div>
